# xm-format

./: Cargo.toml  LICENSE  README.md  plugin.json
.cargo/: config.toml
.github/workflows/: release.yml
src/: c_api.rs  detector.rs  lib.rs  metadata.rs  plugin.rs  streaming.rs  xm.rs  xm_algorithm.rs
src/id3/: storage.rs  taglike.rs  tcon.rs
src/id3/stream/: unsynch.rs
src/id3/stream/frame/: content.rs
