[package]
name = "xm-format"
version = "1.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
decode_picture = []
tokio = []

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto dependencies for XM decryption
aes = "0.8"
cbc = "0.1"
hex = "0.4"
base64 = "0.21"

# WASM runtime for XM algorithm
# Note: wasmer configuration is target-specific (see below)

# ID3 tag parsing (custom implementation for 2-byte language field)
bitflags = "2.0"
byteorder = "1.4"
flate2 = "1"

# Error handling
thiserror = "1.0"
libc = "0.2.182"
lazy_static = "1.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
# Note: wasmer is NOT included for wasm32 targets - we use pure Rust implementation

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = { version = "4.1", default-features = false, features = ["sys-default"] }
wasmer-compiler-cranelift = "4.1"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
